--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ main {
 
 .hero-img {
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url("/assets/images/landingImage.jpg");
+    url("/assets/images/LandingImg.jpg");
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
@@ -68,4 +68,49 @@ main {
     background-color: #fff;
     color: #eda751;
 }
+
+.container {
+    display: flex;
+    justify-content: space-evenly; 
+    align-items: center;  
+    height: 50vh;
+}
+
+.card-container{
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   gap: 10px;  
+   padding: 2px 16px;  
+}
+.card{
+    border-radius: 5px;
+    text-align: center;
+    padding: 20px;
+    margin: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: .3s;
+}
+
+.card:hover{
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+section > h2{
+    text-align: center;
+    margin: 10px;
+    padding: 1rem;
+}
+
+.card > p{
+    font-size: 12px;
+}
+
+.card > img{
+width: 250px;
+height: 250px;
+border-radius: 5px 5px 0 0;
+}
+
+
+
 
